DecafParser.py
# Generated from Decaf.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class DecafParser ( Parser ):

    grammarFileName = "Decaf.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'class'", "'Program'", "'{'", "'}'", 
                     "'['", "']'", "'('", "')'", "'if'", "'for'", "'void'", 
                     "';'", "'return'", "'break'", "'continue'", "'callout'", 
                     "'true'", "'false'", "'+'", "','", "'boolean'", "'int'", 
                     "'!'", "'='", "'-'", "'else'", "'!='", "'=='", "'*'", 
                     "'/'", "'%'", "'&&'", "'||'", "'<'", "'>'", "'<='", 
                     "'>='", "'+='", "'-='" ]

    symbolicNames = [ "<INVALID>", "CLASS", "PROGRAM", "LCURLY", "RCURLY", 
                      "LSQURE", "RSQURE", "LROUND", "RROUND", "IF", "FOR", 
                      "VOID", "SEMICOLON", "RETURN", "BREAK", "CONTINUE", 
                      "CALLOUT", "TRUE", "FALSE", "PLUS", "COMMA", "BOOLEAN", 
                      "INT", "EXCAL", "EQ", "MINUS", "ELSE", "LOGICAL_NOT", 
                      "DOUBLE_EQ", "TIMES", "FORWARD_SLASH", "PERCENT", 
                      "LOGICAL_AND", "LOGICAL_OR", "LESS_THAN", "MORE_THAN", 
                      "LESS_THAN_EQ", "MORE_THAN_EQ", "PLUS_EQ", "MINUS_EQ", 
                      "ID", "DECIMEL_LITEREAL", "HEX_LITEREAL", "CHAR_LITERAL", 
                      "STRING_LITERAL", "WS", "LINE_COMMENT", "DIGIT", "APLHA" ]

    RULE_program = 0
    RULE_int_litereal = 1
    RULE_bool_literal = 2
    RULE_assign_op = 3
    RULE_literal = 4
    RULE_airth_op = 5
    RULE_rel_op = 6
    RULE_eq_op = 7
    RULE_cond_op = 8
    RULE_id = 9
    RULE_method_name = 10
    RULE_feild_name = 11
    RULE_field_type = 12
    RULE_feild_decal = 13
    RULE_location = 14
    RULE_bin_op = 15
    RULE_callout_arg = 16
    RULE_expr = 17
    RULE_method_call = 18
    RULE_var_name = 19
    RULE_var_type = 20
    RULE_var_value = 21
    RULE_var_decal = 22
    RULE_method_params = 23
    RULE_method_type = 24
    RULE_method_param_type = 25
    RULE_method_Param_names = 26
    RULE_method_decl = 27
    RULE_breaknCon = 28
    RULE_statement = 29
    RULE_block = 30

    ruleNames =  [ "program", "int_litereal", "bool_literal", "assign_op", 
                   "literal", "airth_op", "rel_op", "eq_op", "cond_op", 
                   "id", "method_name", "feild_name", "field_type", "feild_decal", 
                   "location", "bin_op", "callout_arg", "expr", "method_call", 
                   "var_name", "var_type", "var_value", "var_decal", "method_params", 
                   "method_type", "method_param_type", "method_Param_names", 
                   "method_decl", "breaknCon", "statement", "block" ]

    EOF = Token.EOF
    CLASS=1
    PROGRAM=2
    LCURLY=3
    RCURLY=4
    LSQURE=5
    RSQURE=6
    LROUND=7
    RROUND=8
    IF=9
    FOR=10
    VOID=11
    SEMICOLON=12
    RETURN=13
    BREAK=14
    CONTINUE=15
    CALLOUT=16
    TRUE=17
    FALSE=18
    PLUS=19
    COMMA=20
    BOOLEAN=21
    INT=22
    EXCAL=23
    EQ=24
    MINUS=25
    ELSE=26
    LOGICAL_NOT=27
    DOUBLE_EQ=28
    TIMES=29
    FORWARD_SLASH=30
    PERCENT=31
    LOGICAL_AND=32
    LOGICAL_OR=33
    LESS_THAN=34
    MORE_THAN=35
    LESS_THAN_EQ=36
    MORE_THAN_EQ=37
    PLUS_EQ=38
    MINUS_EQ=39
    ID=40
    DECIMEL_LITEREAL=41
    HEX_LITEREAL=42
    CHAR_LITERAL=43
    STRING_LITERAL=44
    WS=45
    LINE_COMMENT=46
    DIGIT=47
    APLHA=48

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(DecafParser.CLASS, 0)

        def PROGRAM(self):
            return self.getToken(DecafParser.PROGRAM, 0)

        def LCURLY(self):
            return self.getToken(DecafParser.LCURLY, 0)

        def RCURLY(self):
            return self.getToken(DecafParser.RCURLY, 0)

        def feild_decal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.Feild_decalContext)
            else:
                return self.getTypedRuleContext(DecafParser.Feild_decalContext,i)


        def method_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.Method_declContext)
            else:
                return self.getTypedRuleContext(DecafParser.Method_declContext,i)


        def getRuleIndex(self):
            return DecafParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = DecafParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(DecafParser.CLASS)
            self.state = 63
            self.match(DecafParser.PROGRAM)
            self.state = 64
            self.match(DecafParser.LCURLY)
            self.state = 68
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 65
                    self.feild_decal() 
                self.state = 70
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 74
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DecafParser.VOID) | (1 << DecafParser.BOOLEAN) | (1 << DecafParser.INT))) != 0):
                self.state = 71
                self.method_decl()
                self.state = 76
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 77
            self.match(DecafParser.RCURLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Int_literealContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DECIMEL_LITEREAL(self):
            return self.getToken(DecafParser.DECIMEL_LITEREAL, 0)

        def HEX_LITEREAL(self):
            return self.getToken(DecafParser.HEX_LITEREAL, 0)

        def getRuleIndex(self):
            return DecafParser.RULE_int_litereal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInt_litereal" ):
                listener.enterInt_litereal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInt_litereal" ):
                listener.exitInt_litereal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInt_litereal" ):
                return visitor.visitInt_litereal(self)
            else:
                return visitor.visitChildren(self)




    def int_litereal(self):

        localctx = DecafParser.Int_literealContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_int_litereal)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            _la = self._input.LA(1)
            if not(_la==DecafParser.DECIMEL_LITEREAL or _la==DecafParser.HEX_LITEREAL):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Bool_literalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TRUE(self):
            return self.getToken(DecafParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(DecafParser.FALSE, 0)

        def getRuleIndex(self):
            return DecafParser.RULE_bool_literal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBool_literal" ):
                listener.enterBool_literal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBool_literal" ):
                listener.exitBool_literal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBool_literal" ):
                return visitor.visitBool_literal(self)
            else:
                return visitor.visitChildren(self)




    def bool_literal(self):

        localctx = DecafParser.Bool_literalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_bool_literal)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            _la = self._input.LA(1)
            if not(_la==DecafParser.TRUE or _la==DecafParser.FALSE):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assign_opContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EQ(self):
            return self.getToken(DecafParser.EQ, 0)

        def MINUS_EQ(self):
            return self.getToken(DecafParser.MINUS_EQ, 0)

        def PLUS_EQ(self):
            return self.getToken(DecafParser.PLUS_EQ, 0)

        def getRuleIndex(self):
            return DecafParser.RULE_assign_op

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign_op" ):
                listener.enterAssign_op(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign_op" ):
                listener.exitAssign_op(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign_op" ):
                return visitor.visitAssign_op(self)
            else:
                return visitor.visitChildren(self)




    def assign_op(self):

        localctx = DecafParser.Assign_opContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_assign_op)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DecafParser.EQ) | (1 << DecafParser.PLUS_EQ) | (1 << DecafParser.MINUS_EQ))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def int_litereal(self):
            return self.getTypedRuleContext(DecafParser.Int_literealContext,0)


        def STRING_LITERAL(self):
            return self.getToken(DecafParser.STRING_LITERAL, 0)

        def CHAR_LITERAL(self):
            return self.getToken(DecafParser.CHAR_LITERAL, 0)

        def bool_literal(self):
            return self.getTypedRuleContext(DecafParser.Bool_literalContext,0)


        def getRuleIndex(self):
            return DecafParser.RULE_literal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLiteral" ):
                listener.enterLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLiteral" ):
                listener.exitLiteral(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLiteral" ):
                return visitor.visitLiteral(self)
            else:
                return visitor.visitChildren(self)




    def literal(self):

        localctx = DecafParser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_literal)
        try:
            self.state = 89
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [DecafParser.DECIMEL_LITEREAL, DecafParser.HEX_LITEREAL]:
                self.enterOuterAlt(localctx, 1)
                self.state = 85
                self.int_litereal()
                pass
            elif token in [DecafParser.STRING_LITERAL]:
                self.enterOuterAlt(localctx, 2)
                self.state = 86
                self.match(DecafParser.STRING_LITERAL)
                pass
            elif token in [DecafParser.CHAR_LITERAL]:
                self.enterOuterAlt(localctx, 3)
                self.state = 87
                self.match(DecafParser.CHAR_LITERAL)
                pass
            elif token in [DecafParser.TRUE, DecafParser.FALSE]:
                self.enterOuterAlt(localctx, 4)
                self.state = 88
                self.bool_literal()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Airth_opContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PLUS(self):
            return self.getToken(DecafParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(DecafParser.MINUS, 0)

        def TIMES(self):
            return self.getToken(DecafParser.TIMES, 0)

        def FORWARD_SLASH(self):
            return self.getToken(DecafParser.FORWARD_SLASH, 0)

        def PERCENT(self):
            return self.getToken(DecafParser.PERCENT, 0)

        def getRuleIndex(self):
            return DecafParser.RULE_airth_op

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAirth_op" ):
                listener.enterAirth_op(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAirth_op" ):
                listener.exitAirth_op(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAirth_op" ):
                return visitor.visitAirth_op(self)
            else:
                return visitor.visitChildren(self)




    def airth_op(self):

        localctx = DecafParser.Airth_opContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_airth_op)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DecafParser.PLUS) | (1 << DecafParser.MINUS) | (1 << DecafParser.TIMES) | (1 << DecafParser.FORWARD_SLASH) | (1 << DecafParser.PERCENT))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Rel_opContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LESS_THAN(self):
            return self.getToken(DecafParser.LESS_THAN, 0)

        def MORE_THAN(self):
            return self.getToken(DecafParser.MORE_THAN, 0)

        def LESS_THAN_EQ(self):
            return self.getToken(DecafParser.LESS_THAN_EQ, 0)

        def MORE_THAN_EQ(self):
            return self.getToken(DecafParser.MORE_THAN_EQ, 0)

        def getRuleIndex(self):
            return DecafParser.RULE_rel_op

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRel_op" ):
                listener.enterRel_op(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRel_op" ):
                listener.exitRel_op(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRel_op" ):
                return visitor.visitRel_op(self)
            else:
                return visitor.visitChildren(self)




    def rel_op(self):

        localctx = DecafParser.Rel_opContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_rel_op)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DecafParser.LESS_THAN) | (1 << DecafParser.MORE_THAN) | (1 << DecafParser.LESS_THAN_EQ) | (1 << DecafParser.MORE_THAN_EQ))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Eq_opContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DOUBLE_EQ(self):
            return self.getToken(DecafParser.DOUBLE_EQ, 0)

        def LOGICAL_NOT(self):
            return self.getToken(DecafParser.LOGICAL_NOT, 0)

        def getRuleIndex(self):
            return DecafParser.RULE_eq_op

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEq_op" ):
                listener.enterEq_op(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEq_op" ):
                listener.exitEq_op(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEq_op" ):
                return visitor.visitEq_op(self)
            else:
                return visitor.visitChildren(self)




    def eq_op(self):

        localctx = DecafParser.Eq_opContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_eq_op)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            _la = self._input.LA(1)
            if not(_la==DecafParser.LOGICAL_NOT or _la==DecafParser.DOUBLE_EQ):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Cond_opContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LOGICAL_AND(self):
            return self.getToken(DecafParser.LOGICAL_AND, 0)

        def LOGICAL_OR(self):
            return self.getToken(DecafParser.LOGICAL_OR, 0)

        def getRuleIndex(self):
            return DecafParser.RULE_cond_op

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCond_op" ):
                listener.enterCond_op(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCond_op" ):
                listener.exitCond_op(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCond_op" ):
                return visitor.visitCond_op(self)
            else:
                return visitor.visitChildren(self)




    def cond_op(self):

        localctx = DecafParser.Cond_opContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_cond_op)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            _la = self._input.LA(1)
            if not(_la==DecafParser.LOGICAL_AND or _la==DecafParser.LOGICAL_OR):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(DecafParser.ID, 0)

        def getRuleIndex(self):
            return DecafParser.RULE_id

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterId" ):
                listener.enterId(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitId" ):
                listener.exitId(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitId" ):
                return visitor.visitId(self)
            else:
                return visitor.visitChildren(self)




    def id(self):

        localctx = DecafParser.IdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_id)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(DecafParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Method_nameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id(self):
            return self.getTypedRuleContext(DecafParser.IdContext,0)


        def getRuleIndex(self):
            return DecafParser.RULE_method_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethod_name" ):
                listener.enterMethod_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethod_name" ):
                listener.exitMethod_name(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethod_name" ):
                return visitor.visitMethod_name(self)
            else:
                return visitor.visitChildren(self)




    def method_name(self):

        localctx = DecafParser.Method_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_method_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.id()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Feild_nameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id(self):
            return self.getTypedRuleContext(DecafParser.IdContext,0)


        def LSQURE(self):
            return self.getToken(DecafParser.LSQURE, 0)

        def int_litereal(self):
            return self.getTypedRuleContext(DecafParser.Int_literealContext,0)


        def RSQURE(self):
            return self.getToken(DecafParser.RSQURE, 0)

        def getRuleIndex(self):
            return DecafParser.RULE_feild_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFeild_name" ):
                listener.enterFeild_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFeild_name" ):
                listener.exitFeild_name(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFeild_name" ):
                return visitor.visitFeild_name(self)
            else:
                return visitor.visitChildren(self)




    def feild_name(self):

        localctx = DecafParser.Feild_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_feild_name)
        try:
            self.state = 109
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 103
                self.id()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 104
                self.id()
                self.state = 105
                self.match(DecafParser.LSQURE)
                self.state = 106
                self.int_litereal()
                self.state = 107
                self.match(DecafParser.RSQURE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Field_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(DecafParser.INT, 0)

        def BOOLEAN(self):
            return self.getToken(DecafParser.BOOLEAN, 0)

        def getRuleIndex(self):
            return DecafParser.RULE_field_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterField_type" ):
                listener.enterField_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitField_type" ):
                listener.exitField_type(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitField_type" ):
                return visitor.visitField_type(self)
